/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
}
compileJava{
    options.compilerArgs.add("--enable-preview")
}
compileTestJava{
    options.compilerArgs.add("--enable-preview")
}
test {

    def strings = new ArrayList<String>()
    strings.add("--enable-preview")
    setJvmArgs(strings)
}
repositories {
    mavenLocal()
    maven {
        url = uri('https://jitpack.io')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation fileTree(dir: "libs",includes: ["*.jar"])
    testImplementation 'junit:junit:4.12'
}

group = 'com.github.steveice10'
version = '1.12.2-2'
description = 'MCProtocolLib'
java.sourceCompatibility = JavaVersion.VERSION_20

java {
    withSourcesJar()
    withJavadocJar()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}
